--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -12,6 +12,6 @@
         = f.password_field :password, size: 40
       .field
         = f.label :password, 'Confirm'
-        = f.password_field :password, size: 40
+        = f.password_field :password_confirmation, size: 40
       .field
         = f.submit 'Register'
