--- a/app/views/turtles/show.html.haml
+++ b/app/views/turtles/show.html.haml
@@ -1,4 +1,5 @@
 .turtle
+  -# add medium_avatar method to turtle
   = image_tag @turtle.avatar.url(:medium), :class => 'turtle_img'
   .turtle_contents
     %h1><
