--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,17 +2,17 @@
 %ul.nav
   %li
     = link_to "Top Turtles", turtles_path
-  - if authenticated?
+  - if current_user.present?
     %li
       = link_to "Submit", new_turtle_path
   %li.divider-vertical
   %li.navbar-text
     Hello,
-    - if authenticated?
+    - if current_user.present?
       = current_user.name
     - else
       guest
-  - if not authenticated?
+  - if not current_user.present?
     %li
       = link_to "Login", login_path
     %li
