--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
         = stylesheet_link_tag "application", :media => "all"
         = stylesheet_link_tag "#{controller_name}/#{action_name}", :media => 'all'
         = stylesheet_link_tag "//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css", :media => "all"
+        = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
         = javascript_include_tag "application"
         = favicon_link_tag 'favicon.ico'
         = csrf_meta_tags
